kubernetes/longhorn/basicauth-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: longhorn-ui-basicauth
  namespace: longhorn-system
spec:
  basicAuth:
    secret: longhorn-ui-auth
