kubernetes/longhorn/longhorn-ingressroute-tailscale.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingressroute-tailscale
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik-tailscale
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.internal.dmhosted.com`)
      kind: Rule
      middlewares:
        - name: longhorn-ui-basicauth
          namespace: longhorn-system
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: longhorn-certificate-secret-prod-internal
